--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -52,29 +52,29 @@ table {
 
 
 // Theme Colors
-$t0: hsl(180, 17%, 8%);
-$t1: hsl(180, 17%, 16%);
-$t2: hsl(180, 17%, 24%);
-$t3: hsl(180, 17%, 32%);
-$t4: hsl(180, 17%, 40%);
-$t5: hsl(180, 17%, 48%);
-$t6: hsl(180, 17%, 56%);
-$t7: hsl(180, 17%, 64%);
-$t8: hsl(180, 17%, 72%);
-$t9: hsl(180, 17%, 80%);
+$t0: hsl(215, 10%, 8%);
+$t1: hsl(215, 10%, 16%);
+$t2: hsl(215, 10%, 24%);
+$t3: hsl(215, 10%, 32%);
+$t4: hsl(215, 10%, 40%);
+$t5: hsl(215, 10%, 48%);
+$t6: hsl(215, 10%, 56%);
+$t7: hsl(215, 10%, 64%);
+$t8: hsl(215, 10%, 72%);
+$t9: hsl(215, 10%, 80%);
 
 // Accent Colors
 
-$a0: hsl(33, 45%, 8%);
-$a1: hsl(33, 45%, 16%);
-$a2: hsl(33, 45%, 24%);
-$a3: hsl(33, 45%, 32%);
-$a4: hsl(33, 45%, 40%);
-$a5: hsl(33, 45%, 48%);
-$a6: hsl(33, 45%, 56%);
-$a7: hsl(33, 45%, 64%);
-$a8: hsl(33, 45%, 72%);
-$a9: hsl(33, 45%, 80%);
+$a0: hsl(335, 45%, 8%);
+$a1: hsl(335, 45%, 16%);
+$a2: hsl(335, 45%, 24%);
+$a3: hsl(335, 45%, 32%);
+$a4: hsl(335, 45%, 40%);
+$a5: hsl(335, 45%, 48%);
+$a6: hsl(335, 45%, 56%);
+$a7: hsl(335, 45%, 64%);
+$a8: hsl(335, 45%, 72%);
+$a9: hsl(335, 45%, 80%);
 
 // Alert Colors
 $at0: hsl(200, 75%, 8%);
@@ -397,7 +397,6 @@ body {
     margin: 0;
     z-index: 2;
     overflow: hidden;
-    cursor: pointer;
     transition: width 1s, left 1s;
     box-shadow: -2px 0 4px 2px rgba(0, 0, 0, 0.579);
 
@@ -409,21 +408,20 @@ body {
         height: calc(100% - 60px); 
         width: calc(100% - 20px);
         border-radius: 5px;
-        transition: bottom 2s;
+        transition: bottom 2s, background 1s;
         bottom: 50px;
         bottom: -100%;
         left: 10px;
         z-index: 4;
+        cursor: pointer;
         box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.726);
-        background-color: $a3;
+        background-color: $a2;
 
-        // metaconsole: under the desk, buttons, and title; details the department and project activity
         #userConsoleDesk {
             display: block;
             height: 100%;
-            margin: 0 0 0 300px;
             width: calc(100% - 295px);
-            width: calc(100% - 10px);
+            width: calc(100% - 15px);
             position: absolute;
             right: 0;
             top: 0;
@@ -436,37 +434,83 @@ body {
         #userConsoleMeta {
             display: block;
             height: calc(100% - 10px);
-            width: 280px;
+            width: 275px;
             position: absolute;
-            left: 10px;
+            left: 15px;
             top: 5px;
             border-radius: 4px;
-            background-color: $a5;
+            background-color: $a3;
             cursor: default;
         }
-        // console: title of console, help button, close button, and desk which changes widths
-
+    }
+    #userConsole:hover {
+        background-color: $a4;
     }
 }
 
 #helpDesk {
-    background-color: $a2;
-    height: 40px;
-    display: block;
-    width: 100vw;
     z-index: 5;
-    position: fixed;
-    bottom: 0;
-    bottom: -60px;
-    transition: bottom 1s;
-    box-shadow: -2px 0 6px 2px rgba(0, 0, 0, 0.699);
+    .helpChatWindow {
+        background-color: $a4;
+        display: grid;
+        width: 200px;
+        height: calc(100vh - 108px);
+        right: 15px;
+        bottom: 40px;
+        // bottom: calc(-100vh + 228px);
+        bottom: -100vh;
+        transition: bottom 1s,background 1s;
+        position: absolute;
+        border-radius: 4px;
+        box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.579);
+        z-index: 5;
+        overflow: hidden;
+        grid-template-rows: 80px 3fr 4fr;
+        grid-template-columns: 200px;
+        grid-template-areas: "head" "chat" "tool";
+        section:nth-child(1) {
+            display: block;
+            background-color: $a2;
+            grid-area: head;
+            transition: background 1s;
+            cursor: pointer;
+        }
+        section:nth-child(1):hover {
+            background-color: $a4;
+        }
+        section:nth-child(2) {
+            display: block;
+            grid-area: chat;
+        }
+        section:nth-child(3) {
+            display: block;
+            grid-area: tool;
+        }
+
+        
+    }
+    .helpChatWindow:hover {
+        background-color: $a6;
+    }
+    #helpDeskFooter {
+        background-color: $a2;
+        height: 40px;
+        display: block;
+        width: 100%;
+        z-index: 5;
+        position: fixed;
+        bottom: 0;
+        bottom: -60px;
+        transition: bottom 1s;
+        box-shadow: -2px 0 6px 2px rgba(0, 0, 0, 0.699);
+    }
 }
 
 #sidebar {
     position: absolute;
     display: block;
-    width: 320px;
     height: calc(100vh - 48px);
+    width: 100%;
     top: 48px;
     left: 0;
     z-index: 1;
@@ -474,9 +518,10 @@ body {
 
     #quickTools {
         display: grid;
+        // display: none;
         position: absolute;
         background-color: $a8;
-        width: calc(100% - 10px);
+        width: 310px;
         top: 5px;
         height: calc(100% - 50px);
         border-radius: 4px;
